--- a/About/css/About.css
+++ b/About/css/About.css
@@ -5,6 +5,7 @@ body {
     background-image: linear-gradient(To right, rgb(234, 245, 250),rgb(202, 233, 247));
     margin: 0%;
     padding: 0%;
+    overflow-x: hidden;
 }
 
 .main-menu{
@@ -14,21 +15,19 @@ body {
     line-height: 1.5em;
     position:fixed;
     z-index: 1;
+    width: 100%;
   
 }
 .active{
     background-color:rgb(32, 32, 32);
    
 }
-.inner-menu{
-    margin: 0 150px;
-    width: 1170px;
-}
 .inner-menu ul{
     margin: 0;
     /* padding: 10px 0 0; */
     list-style: none;
     text-align: right;
+    padding: 0px 20px;
 }
 .inner-menu ul li{
     float: none;
