--- a/contact/css/contact.css
+++ b/contact/css/contact.css
@@ -5,6 +5,7 @@ body {
     background-image: linear-gradient(To right, rgb(234, 245, 250),rgb(202, 233, 247));
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .main-menu{
@@ -14,18 +15,15 @@ body {
     line-height: 1.5em;
     position:fixed;
     z-index: 1;
+    width: 100%;
 }
 .active{
     background-color:rgb(32, 32, 32);
    
 }
-.inner-menu{
-    margin: 0 200px;
-    width: 1170px;
-}
 .inner-menu ul{
     margin: 0;
-    /* padding: 10px 0 0; */
+    padding: 0px 20px;
     list-style: none;
     text-align: right;
 }
@@ -71,7 +69,6 @@ body {
 }
 .inner-menuul li ul li{
     float: left;
-    width: 100%;
     text-align: left;
 }
 .inner-menu ul li ul li a{
@@ -90,10 +87,11 @@ body {
 }
 
 .cont-img-1 {
-    max-width: 100%;
-    padding: 80px 262px 30px 273px;
+   margin: auto;
+display: flex;
+padding-top: 100px;
     background-color: azure;
-    margin-bottom: 30px;
+
 }
 
 .head-1 {
