--- a/css/Photography.css
+++ b/css/Photography.css
@@ -5,6 +5,7 @@ body {
     background-image: linear-gradient(To right, rgb(234, 245, 250), rgb(202, 233, 247));
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     
 }
 .main-menu{
@@ -14,18 +15,16 @@ body {
     line-height: 1.5em;
     position:fixed;
     z-index: 1;
+    width: 100%;
   
 }
 .active{
     background-color:rgb(32, 32, 32);
    
 }
-.inner-menu{
-    margin: 0 200px;
-    width: 1170px;
-}
 .inner-menu ul{
     margin: 0;
+    padding: 0px 20px;
     /* padding: 10px 0 0; */
     list-style: none;
     text-align: right;
@@ -72,9 +71,7 @@ body {
 }
 .inner-menu ul li ul li{
     float: left;
-    width: 100%;
     text-align: left;
-    background-color:black ;
     box-shadow: 2px 2px 5px gray;
 }
 .inner-menu ul li ul li a{
@@ -683,6 +680,7 @@ header {
 }
 
 .color {
+    transition: 0.3s;
     background-color: rgb(203, 218, 224);
     border-radius: 7px;
     box-shadow: 3px 5px 7px 4px rgb(141, 152, 160);
